[tool.poetry]
name = "gekcs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "<2.0.0"
numpy = "^2.0.1"
tensorboard = "^2.17.0"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.1"
wandb = "^0.17.5"
ogb = "^1.3.6"
tueplots = "^0.0.15"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
